--- a/index.html
+++ b/index.html
@@ -146,20 +146,25 @@
     </div>
 </section>
 
-<section class="projet">
+<section id="projet" class="projet">
     <h1>Projet</h1>
-    <div></div>
+    <div class="grid">
+        <div class="item1">moi</div>
+        <div class="item2">toi</div>
+        <div class="item3">teste</div>
+        <div class="item4">pepe</div>
+    </div>
 
 </section>
 
-<section class="veille">
+<section id="veille" class="veille">
     <h1>Veille Technologique</h1>
     <h2>Qu'est-ce que la veille technologique ?</h2>
     <p>La veille technologique, élément de la veille stratégique, consiste à surveiller les évolutions techniques, les innovations dans un secteur d’activité donnée. La veille technologique comprend notamment la surveillance, la collecte, le partage et la diffusion d’information permettant d’anticiper ou de s’informer sur des changements en matière de recherche, développement, brevet, lancement de nouveaux produits, matériaux, processus, concepts, innovation de fabrication, etc…. Cela a pour but d’évaluer l’impact sur l’environnement et l’organisation.  </p>
     <p> Ma veille technologique porte sur le DLSS, je tire "pull" mes informations depuis google , twitter et bien d'autre site de renseignement sur le DLSS de NVIDIA. J'ai mis en place des alertes google pour recevoir automatiquement les nouveautés et les mise a jour sur le DLSS "push".</p>
 </section>
 
-<section class="contact">
+<section id="contact" class="contact">
     <h1>Contactez-moi</h1>
     <h2>enzodasilvaribeiro@gmail.com</h2>
     <h2>0608172136</h2>
