--- a/index.html
+++ b/index.html
@@ -147,12 +147,44 @@
 </section>
 
 <section id="projet" class="projet">
-    <h1>Projet</h1>
+    <h3>Projet</h3>
     <div class="grid">
-        <div class="item1">moi</div>
-        <div class="item2">toi</div>
-        <div class="item3">teste</div>
-        <div class="item4">pepe</div>
+        <div class="item">
+            <div class="img_item"><img src="images/logo.png" alt="logo"></div>
+            <div class="sous_item">
+                <h1>Le Titre du projet</h1>
+                <span>Description du projet en quelque ligne</span>
+            </div>
+            <a href="">Lien du projet</a>
+
+        </div>
+        <div class="item">
+            <div class="img_item"><img src="images/logo.png" alt="logo"></div>
+            <div class="sous_item">
+                <h1>Le Titre du projet</h1>
+                <span>Description du projet en quelque ligne</span>
+            </div>
+            <a href="">Lien du projet</a>
+
+        </div>
+        <div class="item">
+            <div class="img_item"><img src="images/logo.png" alt="logo"></div>
+            <div class="sous_item">
+                <h1>Le Titre du projet</h1>
+                <span>Description du projet en quelque ligne</span>
+            </div>
+            <a href="">Lien du projet</a>
+
+        </div>
+        <div class="item">
+            <div class="img_item"><img src="images/logo.png" alt="logo"></div>
+            <div class="sous_item">
+                <h1>Le Titre du projet</h1>
+                <span>Description du projet en quelque ligne</span>
+            </div>
+            <a href="">Lien du projet</a>
+
+        </div>
     </div>
 
 </section>
