responsive du haut de page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Janvier 2023 - Fevrier 2023</p>
         <h2>Stage de 5 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez, Chazelle Imprimeurs à Dole ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage à Dole ou j'ai pu faire :</p>
         <div class="description">
             <p><i class="far fa-circle"></i>Réalisation d'un site web en Laravel 9 </p>
             <p><i class="fas fa-circle"></i>Découverte et utilisation des logiciels de Illustrator et Photoshop</p>
@@ -187,7 +187,7 @@
 
 <section id="contact" class="contact">
     <h1>Contactez-moi</h1>
-    <h2>enzodasilvaribeiro@gmail.com</h2>
+    <h2></h2>
     <h2>0608172136</h2>
 </section>
 
