--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         <p>Qui Suis-Je ?</p>
         <span>Je suis Enzo DA SILVA RIBEIRO, étudiant en BTS SIO (Services Informatiques aux Organisations), Option SLAM (Solutions Logicielles et Application Métier) l'option spécialisée pour le développement, au lycée Lycée Pasteur Mont Roland (39100).
             Actuellement diplômé du BAC Pro SN (Système Numérique ).Mon projet professionnel est de devenir Webmaster / Web développeur (concepteur de site internet), après mes 2 ans d'études en BTS SIO et de devenir auto-entrepreneur.</span>
-            <a href="CV.pdf" target="_blank">Retrouvez mon CV ici !</a>
+            <a class="cv_page" href="CV.pdf" target="_blank">Retrouvez mon CV ici !</a>
+            <a class="cv_dl" href="CV.pdf" download="CV.pdf" alt="Telécharger mon CV"><span class="material-symbols-outlined">
+                arrow_downward
+            </span></a>
     </div>
     <div class="a_porpos_image">
         <img src="images/moi.jpg" alt="photos de moi">
