--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="sacs"> <img src="images/temps-de-travail.png" alt="engrenage"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Juillet 2022 - Août 2022</p>
         <h2>Travail d'été de 1 mois  </h2>
-        <p class="texte">J'ai effectué un stage chez, SARL EUROFLACO à Chevigny ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez SARL EUROFLACO à Chevigny ou j'ai pu faire :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Remplissage de flacons sur palette.</p>
             <p><i class="far fa-circle"></i>Mise en conformité des palettes.</p>
@@ -93,7 +93,7 @@
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Mai 2022 - Juin 2022</p>
         <h2>Stage de 6 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez, Diminutif à Longchamp ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez Diminutif à Longchamp ou j'ai pu faire :</p>
         <div class="description">
             <p><i class="far fa-circle"></i>Création d'un site web vitrine en:</p>
             <p><i class="fas fa-circle"></i>HTML</p>
@@ -104,7 +104,7 @@
         <div class="sacs"> <img src="images/temps-de-travail.png" alt="engrenage"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Juin 2021</p>
         <h2>Travail d'été de 2 semaines </h2>
-        <p class="texte">J'ai effectué un stage chez, DEVRED à Dijon Toison D'Or ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez DEVRED à Dijon Toison D'Or ou j'ai pu faire :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Vente, conseil.</p>
             <p><i class="far fa-circle"></i>Réapprovisionnement.</p>
@@ -116,7 +116,7 @@
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Mai 2021</p>
         <h2>Stage de 4 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez, D.S.I Dijon Services Informatique à Dijon ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez D.S.I Dijon Services Informatique à Dijon ou j'ai pu faire :</p>
         <div class="description">
             <p><i class="far fa-circle"></i>Maintenance de pc du client</p>
             <p><i class="fas fa-circle"></i>Vente de produits informatiques</p>
@@ -127,7 +127,7 @@
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Décembre 2019 - Janvier 2020</p>
         <h2>Stage de 10 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez, TIBCO SERVICES à Dijon ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez TIBCO SERVICES à Dijon ou j'ai pu faire :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Maintenance d’ordinateur de bureau de certaines banques et de certaines sociétés telles que Sephora ou des PMU....</p>
             <p><i class="far fa-circle"></i>Inventaire des locaux</p>
@@ -199,7 +199,7 @@
     </div>
 </section>
 
-<section id="contact" class="contact">
+<!--<section id="contact" class="contact">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21654.00665192122!2d5.256647262534002!3d47.280125118314366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f2a6fa033ff421%3A0xfc4fde9422f7b55f!2s13%20La%20Fontaine%20du%20Grand%20Pre%2C%2021110%20Chambeire!5e0!3m2!1sfr!2sfr!4v1680025699505!5m2!1sfr!2sfr" width="100%" height="900" style="border:0;" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     <div class="contact_block">
         <h1>Contacter moi !</h1>
@@ -219,7 +219,7 @@
 
         </form>
     </div>
-</section>
+</section>-->
 
 
 
