--- a/index.html
+++ b/index.html
@@ -204,12 +204,15 @@
         <h2>CONTACT</h2>
         <hr>
         <ul class="social-media-list">
-          <li><a href="#" target="_blank" class="contact-icon">
+          <li><a href="https://github.com/EnzoDA?tab=repositories" target="_blank" class="contact-icon">
             <i class="fab fa-github" aria-hidden="true"></i></a>
           </li>
-          <li><a href="tel:0608172136" target="_blank" class="contact-icon">
+            <details data-popover="down">
+            <summary><li><a href="tel:0608172136"  class="contact-icon">
             <i class="fas fa-mobile-alt" aria-hidden="true"></i></a>
-          </li>
+          </li></summary>
+            <p>06 08 17 21 36</p>
+            </details>
           <li><a href="mailto:enzodasilvaribeiro@gmail.com" target="_blank" class="contact-icon">
             <i class="far fa-envelope" aria-hidden="true"></i></a>
           </li>
@@ -220,31 +223,41 @@
         <hr>
       </div>
       <div class="contact-form-bas">
-        <form id="contact-form" action="envoi-email.php" method="post">
+        <form id="contact-form" action="envoi-email.php" method="post" >
           <div class="form-item">
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" disabled name="name" required>
             <label>Name:</label>
           </div>
           <div class="form-item">
-            <input type="text" id="email" name="email" required>
+            <input type="text" id="email" disabled name="email" required>
             <label>Email:</label>
           </div>
           <div class="form-item">
-            <input type="text" id="subject" name="subject" required>
+            <input type="text" id="subject" disabled name="subject" required>
             <label>Objet:</label>
           </div>
           <div class="form-item">
-            <textarea class="" id="message" name="message"  rows="4" required></textarea>
+            <textarea class="" id="message" disabled name="message"  rows="4" required></textarea>
             <label>Message:</label>
           </div>
-          <button type="submit" class="submit-btn">Send</button>  
+          <button type="submit"  class="submit-btn">Send</button>  
         </form>
       </div>
     </div>
   </section>
 
 
+  <footer>
+    <div class="footer">
+        <div class="footer-text">
+            <p> &#169; 2023 Enzo Da Silva Ribeiro</p>
+            <div class="footer_email">
+            <p><i class="fa fa-envelope"></i> enzodasilvaribeiro@gmail.com</p>
+            <p><i class="fas fa-phone"></i> 06 08 17 21 36</p>
+            </div>
+        </div>
 
+  </footer>
 <button id="scroll_top_button" onclick="scrollToTop()"class="scroll_top_button" 
     type="button">
     <span class="material-symbols-outlined">
