manque competences, coockies, captchat, utilité du form contact

--- a/index.html
+++ b/index.html
@@ -156,28 +156,38 @@
     <h3>Projet</h3>
     <div class="grid">
         <div class="item">
+            <a href="https://github.com/EnzoDA?tab=repositories">
             <div class="img_item"><img src="images/logo.png" alt="logo"></div>
             <div class="sous_item">
                 <h1>Portfolio</h1>
-                <p>La création de mon portfolio </p>
+                <p>La création de mon portfolio en HTML, CSS, javascript, pour que vous puissiez me découvrir un peu </p>
             </div>
-
+        </a>
         </div>
         <div class="item">
-            <div class="img_item"><img src="images/logo.png" alt="logo"></div>
+            <a href="https://github.com/EnzoDA?tab=repositories">
+            <div class="img_item"><img src="images/TSR.png" alt="logo"></div>
             <div class="sous_item">
-                <h1>Portfolio</h1>
-                <p>La création de mon portfolio </p>
+                <h1>TPMP</h1>
+                <p>L’objectif du projet est de développer une application C# permettant à un 
+                    administrateur de créer des paris et consulter la liste de ses derniers en 
+                    définissant les résultats 
+                </p>
             </div>
-
+        </a>
         </div>
         <div class="item">
-            <div class="img_item"><img src="images/logo.png" alt="logo"></div>
+            <a href="https://github.com/EnzoDA?tab=repositories">
+            <div class="img_item"><img src="images/TPMP.png" alt="logo"></div>
             <div class="sous_item">
-                <h1>Portfolio</h1>
-                <p>La création de mon portfolio </p>
+                <h1>TSR</h1>
+                <p>L’objectif du projet est de développer en Laravel une application Web permettant 
+                    de faciliter les étudiants pour les épreuves de Bac et de BTS.
+                    pour remplir l’entête des feuilles, avec les infos de l’épreuve.
+                    D'on 2 outils différents, un outil backend et Front-End
+                </p>
             </div>
-
+         </a>
         </div>
     </div>
 
