les réglages qui vont  pas

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
         <canvas class="le_dessin">
         </canvas>
     </div>
-    <div disabled="true" class="hero">
-        <p>Je suis <span
+    <div disabled="true" class="hero ">
+        <h2>Je suis <span
             class="txt-rotate"
-            data-period=""
-            data-rotate='[ " Développeur.", " Étudiant.", " Déterminé.", " Patient.", " Attentif." ]'></span></p>
+            data-period="230"
+            data-rotate='[ " Développeur.", " Étudiant.", " Déterminé.", " Patient.", " Attentif." ]'></span>
+        </h2>
         <h1>DA SILVA RIBEIRO</h1>
         <h1>ENZO</h1>
     </div>
@@ -51,9 +52,8 @@
 <section id="a_propos" class="a_propos">
     <div class="text_moi">
         <h1>À propos de moi !</h1>
-        <p>Qui Suis-Je ?</p>
-        <span>Je suis Enzo DA SILVA RIBEIRO, étudiant en BTS SIO (Services Informatiques aux Organisations), Option SLAM (Solutions Logicielles et Application Métier) l'option spécialisée pour le développement, au lycée Lycée Pasteur Mont Roland (39100).
-            Actuellement diplômé du BAC Pro SN (Système Numérique ).Mon projet professionnel est de devenir Webmaster / Web développeur (concepteur de site internet), après mes 2 ans d'études en BTS SIO et de devenir auto-entrepreneur.</span>
+        <h2>Qui Suis-Je ?</h2>
+        <span>Je suis Enzo DA SILVA RIBEIRO, étudiant en BTS SIO (Services Informatiques aux Organisations), option SLAM (Solutions Logicielles et Applications Métiers), qui est une option spécialisée dans le développement, au Lycée Pasteur Mont Roland (39100).  Actuellement diplômé du diplôme de BAC Pro SN (Système Numérique). <br><br> Mon projet professionnel est de devenir Webmaster / Web développeur (concepteur de sites internet) après mes deux ans d'études en BTS SIO et de peut-être devenir auto-entrepreneur.</span>
             <div class="cv">
             <a class="cv_page" href="CV.pdf" target="_blank">Retrouvez mon CV ici !</a>
             <a class="cv_dl" href="CV.pdf" download="CV.pdf" alt="Telécharger mon CV"><span class="material-symbols-outlined">
@@ -72,65 +72,65 @@
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Janvier 2023 - Fevrier 2023</p>
         <h2>Stage de 5 semaines</h2>
-        <p class="texte">J'ai effectué un stage à Dole ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage à Dole ou j'ai pu réaliser :</p>
         <div class="description">
-            <p><i class="far fa-circle"></i>Réalisation d'un site web en Laravel 9 </p>
+            <p><i class="fas fa-circle"></i>Réalisation d'un site web en Laravel 9 </p>
             <p><i class="fas fa-circle"></i>Découverte et utilisation des logiciels de Illustrator et Photoshop</p>
-            <p><i class="far fa-circle"></i>Utilisation d'une base de données</p>
+            <p><i class="fas fa-circle"></i>Utilisation d'une base de données</p>
         </div>
     </div>
     <div class="stage1">
         <div class="sacs"> <img src="images/temps-de-travail.png" alt="engrenage"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Juillet 2022 - Août 2022</p>
         <h2>Travail d'été de 1 mois  </h2>
-        <p class="texte">J'ai effectué un stage chez SARL EUROFLACO à Chevigny ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez SARL EUROFLACO à Chevigny ou j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Remplissage de flacons sur palette.</p>
-            <p><i class="far fa-circle"></i>Mise en conformité des palettes.</p>
+            <p><i class="fas fa-circle"></i>Mise en conformité des palettes.</p>
         </div>
     </div>
     <div class="stage2">
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Mai 2022 - Juin 2022</p>
         <h2>Stage de 6 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez Diminutif à Longchamp ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez Diminutif à Longchamp ou j'ai pu réaliser :</p>
         <div class="description">
-            <p><i class="far fa-circle"></i>Création d'un site web vitrine en:</p>
+            <p><i class="fas fa-circle"></i>Création d'un site web vitrine en:</p>
             <p><i class="fas fa-circle"></i>HTML</p>
-            <p><i class="far fa-circle"></i>CSS</p>
+            <p><i class="fas fa-circle"></i>CSS</p>
         </div>
     </div>
     <div class="stage1">
         <div class="sacs"> <img src="images/temps-de-travail.png" alt="engrenage"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Juin 2021</p>
         <h2>Travail d'été de 2 semaines </h2>
-        <p class="texte">J'ai effectué un stage chez DEVRED à Dijon Toison D'Or ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez DEVRED à Dijon Toison D'Or ou j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Vente, conseil.</p>
-            <p><i class="far fa-circle"></i>Réapprovisionnement.</p>
+            <p><i class="fas fa-circle"></i>Réapprovisionnement.</p>
             <p><i class="fas fa-circle"></i>Merchandising.</p>
-            <p><i class="far fa-circle"></i>Réaménagement des locaux.</p>
+            <p><i class="fas fa-circle"></i>Réaménagement des locaux.</p>
         </div>
     </div>
     <div class="stage2">
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Mai 2021</p>
         <h2>Stage de 4 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez D.S.I Dijon Services Informatique à Dijon ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez D.S.I Dijon Services Informatique à Dijon ou j'ai pu réaliser :</p>
         <div class="description">
-            <p><i class="far fa-circle"></i>Maintenance de pc du client</p>
+            <p><i class="fas fa-circle"></i>Maintenance de pc du client</p>
             <p><i class="fas fa-circle"></i>Vente de produits informatiques</p>
-            <p><i class="far fa-circle"></i>Conseil au public</p>
+            <p><i class="fas fa-circle"></i>Conseil au public</p>
         </div>
     </div>
     <div class="stage1">
         <div class="sacs"> <img src="images/sacs.png" alt="sacs"></div>
         <p class="date"> <i class="far fa-calendar-alt"></i>Décembre 2019 - Janvier 2020</p>
         <h2>Stage de 10 semaines</h2>
-        <p class="texte">J'ai effectué un stage chez TIBCO SERVICES à Dijon ou j'ai pu faire :</p>
+        <p class="texte">J'ai effectué un stage chez TIBCO SERVICES à Dijon ou j'ai pu réaliser :</p>
         <div class="description">
             <p><i class="fas fa-circle"></i>Maintenance d’ordinateur de bureau de certaines banques et de certaines sociétés telles que Sephora ou des PMU....</p>
-            <p><i class="far fa-circle"></i>Inventaire des locaux</p>
+            <p><i class="fas fa-circle"></i>Inventaire des locaux</p>
             <p><i class="fas fa-circle"></i>Réparation de machines dans les PMU.</p>
         </div>
     </div>
@@ -148,7 +148,7 @@
         <div class="sacs"> <img src="images/planification.png" alt="Icône de planification en blanc"> </div>
         <p class="date"> <i class="far fa-calendar-alt"></i>2019 - 2021</p>
         <h2>BAC Pro SN Option RISC</h2>
-        <p class="texte">Lycée Pasteur Mont Roland Dole, Bac pro Systèmes numériques option C réseaux informatiques et systèmes communicants (RISC).Obtention du BAC avec mention BIEN.</p>
+        <p class="texte">Lycée Pasteur Mont Roland Dole, Bac pro Systèmes numériques option C réseaux informatiques et systèmes communicants (RISC). Obtention du BAC avec mention BIEN.</p>
     </div>
 </section>
 
@@ -156,8 +156,8 @@
     <h3>Projet</h3>
     <div class="grid">
         <div class="item">
-            <a href="https://github.com/EnzoDA?tab=repositories">
-            <div class="img_item"><img src="images/logo.png" alt="logo"></div>
+            <a href="https://github.com/EnzoDA/Portfolio" target="_blank">
+            <div class="img_item"><img src="images/logo.png" alt="logo du portfolio"></div>
             <div class="sous_item">
                 <h1>Portfolio</h1>
                 <p>La création de mon portfolio en HTML, CSS, javascript, pour que vous puissiez me découvrir un peu </p>
@@ -165,8 +165,8 @@
         </a>
         </div>
         <div class="item">
-            <a href="https://github.com/EnzoDA?tab=repositories">
-            <div class="img_item"><img src="images/TSR.png" alt="logo"></div>
+            <a href="https://github.com/EnzoDA/TPMP" target="_blank">
+            <div class="img_item"><img src="images/TPMP.png" alt="logo du projet TPMP"></div>
             <div class="sous_item">
                 <h1>TPMP</h1>
                 <p>L’objectif du projet est de développer une application C# permettant à un 
@@ -177,18 +177,34 @@
         </a>
         </div>
         <div class="item">
-            <a href="https://github.com/EnzoDA?tab=repositories">
-            <div class="img_item"><img src="images/TPMP.png" alt="logo"></div>
+            <a href="https://github.com/EnzoDA/TSR-back-office" target="_blank">
+            <div class="img_item"><img src="images/TSR.png" alt="logo du projet TSR Backend"></div>
             <div class="sous_item">
-                <h1>TSR</h1>
+                <h1>TSR Backend</h1>
                 <p>L’objectif du projet est de développer en Laravel une application Web permettant 
-                    de faciliter les étudiants pour les épreuves de Bac et de BTS.
-                    pour remplir l’entête des feuilles, avec les infos de l’épreuve.
+                    de faciliter les étudiants pour les épreuves de Bac et de BTS. 
+                    pour remplir l’entête des feuilles, avec les infos de l’épreuve. 
                     D'on 2 outils différents, un outil backend et Front-End
                 </p>
             </div>
          </a>
         </div>
+        <div class="item">
+            <a href="https://github.com/EnzoDA/TSR-front" target="_blank">
+            <div class="img_item"><img src="images/TSR.png" alt="logo du projet TSR Front-End"></div>
+            <div class="sous_item">
+                <h1>TSR Front-End</h1>
+                <p>L’objectif du projet est de développer en Laravel une application Web permettant 
+                    de faciliter les étudiants pour les épreuves de Bac et de BTS. 
+                    pour remplir l’entête des feuilles, avec les infos de l’épreuve. 
+                    D'on 2 outils différents, un outil backend et Front-End
+                </p>
+            </div>
+         </a>
+        </div>
+
+
+
     </div>
 
 </section>
