--- a/index.html
+++ b/index.html
@@ -137,19 +137,24 @@
 
 </section>
 <section id="formation" class="formation">
+    
     <h1>Diplôme et formation</h1>
+    <div class="encadrement"> 
     <div class="formation1">
-        <div class="sacs"> <img src="images/planification.png" alt="Icône de planification en blanc"> </div>
+        <div class="sacs"> <img src="images/planification 2.png" alt="Icône de planification en blanc"> </div>
         <p class="date"> <i class="far fa-calendar-alt"></i>2021 - 2023</p>
-        <h2>BTS SIO Développement</h2>
+        <h2>BTS SIO SLAM</h2>
         <p class="texte">Lycée Pasteur Mont Roland Dole, Brevet de technicien supérieur - Services informatiques aux organisations, Option SLAM (Solutions Logicielles et Applications Métiers)</p>
     </div>
+</div>
+<div class="encadrement"> 
     <div class="formation1">
-        <div class="sacs"> <img src="images/planification.png" alt="Icône de planification en blanc"> </div>
+        <div class="sacs"> <img src="images/planification 2.png" alt="Icône de planification en blanc"> </div>
         <p class="date"> <i class="far fa-calendar-alt"></i>2019 - 2021</p>
         <h2>BAC Pro SN Option RISC</h2>
         <p class="texte">Lycée Pasteur Mont Roland Dole, Bac pro Systèmes numériques option C réseaux informatiques et systèmes communicants (RISC). Obtention du BAC avec mention BIEN.</p>
     </div>
+</div>
 </section>
 
 <section id="projet" class="projet">
