--- a/index.html
+++ b/index.html
@@ -53,7 +53,36 @@
     <div class="text_moi">
         <h1>À propos de moi !</h1>
         <h2>Qui Suis-Je ?</h2>
-        <span>Je suis Enzo DA SILVA RIBEIRO, étudiant en BTS SIO (Services Informatiques aux Organisations), option SLAM (Solutions Logicielles et Applications Métiers), qui est une option spécialisée dans le développement, au Lycée Pasteur Mont Roland (39100).  Actuellement diplômé du diplôme de BAC Pro SN (Système Numérique). <br><br> Mon projet professionnel est de devenir Webmaster / Web développeur (concepteur de sites internet) après mes deux ans d'études en BTS SIO et de peut-être devenir auto-entrepreneur.</span>
+        <span>Je suis Enzo DA SILVA RIBEIRO, étudiant en BTS SIO (Services Informatiques aux Organisations),
+            option SLAM (Solutions Logicielles et Applications Métiers), qui est une option spécialisée dans 
+            le développement, au Lycée Pasteur Mont Roland (39100).  Actuellement diplômé du diplôme de BAC 
+            Pro SN (Système Numérique). <br><br> Mon projet professionnel est de devenir Webmaster / Web développeur
+            (concepteur de sites internet) après mes deux ans d'études en BTS SIO et de peut-être devenir 
+            auto-entrepreneur.
+            <br>Durant ces années, j'ai pu acquérir plusieurs compétences :
+            </span>
+            <div class="all_card">
+            <div class="card">
+                <div class="card-details">
+                  <p class="text-title">HTML</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-details">
+                  <p class="text-title">CSS</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-details">
+                  <p class="text-title">C#</p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-details">
+                  <p class="text-title">SQL</p>
+                </div>
+              </div>
+            </div>
             <div class="cv">
             <a class="cv_page" href="CV.pdf" target="_blank">Retrouvez mon CV ici !</a>
             <a class="cv_dl" href="CV.pdf" download="CV.pdf" alt="Telécharger mon CV"><span class="material-symbols-outlined">
@@ -252,6 +281,8 @@
           </li>       
         </ul>
         <hr>
+        <h3><a href="mailto:enzodasilvaribeiro@gmail.com" target="_blank" class="contact-icon"><i class="fa fa-envelope"></i>enzodasilvaribeiro@gmail.com </a></h3>
+        <h3><a href="tel:0608172136"  class="contact-icon"><i class="fas fa-phone"></i>06 08 17 21 36</a></h3>
       </div>
       <div class="contact-form-bas">
         <form id="contact-form" action="envoi-email.php" method="post" >
